--- a/backend/corona-components/pom.xml
+++ b/backend/corona-components/pom.xml
@@ -4,15 +4,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>de.govhackathon</groupId>
+    <artifactId>wvsvcoronatracker-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+
   <packaging>pom</packaging>
 
-  <groupId>de.govhackathon</groupId>
-  <artifactId>wvsvcoronatracker-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <modules>
-    <module>corona-components</module>
-    <module>corona-server</module>
-  </modules>
+  <artifactId>corona-components</artifactId>
 
 </project>
