--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,4 +15,23 @@
     <module>corona-server</module>
   </modules>
 
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>${java.version}</source>
+          <source>${java.version}</source>
+        </configuration>
+      </plugin>
+    </plugins>
+
+  </build>
+
 </project>
