--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -24,14 +24,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.7.0</version>
         <configuration>
           <source>${java.version}</source>
-          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
     </plugins>
-
   </build>
+
 
 </project>
