--- a/backend/corona-components/corona-api/pom.xml
+++ b/backend/corona-components/corona-api/pom.xml
@@ -11,7 +11,35 @@
   </parent>
 
   <artifactId>corona-api</artifactId>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
+
+  <properties>
+    <maven.assembly.plugin.version>3.1.1</maven.assembly.plugin.version>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>${maven.assembly.plugin.version}</version>
+        <executions>
+          <execution>
+            <id>bundle-api-specs</id>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <descriptors>
+                <descriptor>src/main/assembly/assembly.xml</descriptor>
+              </descriptors>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 
 </project>
