feat(API): Dto-Suffix for all API objects

--- a/backend/corona-server/pom.xml
+++ b/backend/corona-server/pom.xml
@@ -139,6 +139,7 @@
 							<generateModelTests>true</generateModelTests>
 							<withXml>true</withXml>
 							<generatorName>spring</generatorName>
+							<modelNameSuffix>Dto</modelNameSuffix>
 							<configOptions>
 								<sourceFolder>src/gen/java/</sourceFolder>
 								<java8>true</java8>
