--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -17,13 +17,14 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  grouped_buttons: ^1.0.3
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  grouped_buttons: ^1.0.3
+  country_code_picker: ^1.3.6
 
 dev_dependencies:
   flutter_test:
