--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,6 +17,7 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <mapstruct.version>1.3.1.Final</mapstruct.version>
   </properties>
 
   <build>
@@ -28,6 +29,13 @@
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
