--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   grouped_buttons: ^1.0.3
   country_code_picker: ^1.3.6
+  devicelocale: ^0.2.2
 
 dev_dependencies:
   flutter_test:
