--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   grouped_buttons: ^1.0.3
   country_code_picker: ^1.3.6
   devicelocale: ^0.2.2
+  firebase_messaging: ^6.0.13
 
 dev_dependencies:
   flutter_test:
