Add Database config. Comment liquibas migration. Needs to fixed.

--- a/backend/corona-server/src/main/resources/application.properties
+++ b/backend/corona-server/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Hikari will use the above plus the following to setup connection pooling
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
 
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://corona-tracker-dev.postgres.database.azure.com:5432/postgres
+spring.datasource.username=tracker@corona-tracker-dev
+spring.datasource.password=UPH-Y5KTiGMEcuXN_yE4Q71Q2
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
