--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   grouped_buttons: ^1.0.3
   country_code_picker: ^1.3.6
   devicelocale: ^0.2.2
+  contacts_service: ^0.3.10
+  permission_handler: '^4.4.0+hotfix.2'
 
 dev_dependencies:
   flutter_test:
