feat(DB): use docker stack with local postgres

--- a/backend/corona-server/src/main/resources/application.properties
+++ b/backend/corona-server/src/main/resources/application.properties
@@ -6,11 +6,14 @@ spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://corona-tracker-dev.postgres.database.azure.com:5432/postgres
-spring.datasource.username=tracker@corona-tracker-dev
-spring.datasource.password=UPH-Y5KTiGMEcuXN_yE4Q71Q2
+spring.datasource.url=jdbc:postgresql://localhost:5432/corona
+spring.datasource.username=corona
+spring.datasource.password=password
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.liquibase.change-log=classpath:config/liquibase/liquibase-master.xml
+spring.liquibase.contexts=not-used-here
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
