--- a/backend/corona-server/pom.xml
+++ b/backend/corona-server/pom.xml
@@ -15,6 +15,10 @@
   <name>wvsvcoronatracker</name>
   <description>Demo project for Spring Boot</description>
 
+  <properties>
+     <pg-driver.version>42.2.10</pg-driver.version>
+  </properties>
+
   <packaging>jar</packaging>
 
   <dependencyManagement>
@@ -52,6 +56,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${pg-driver.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
