Revert "changed bundle name"
This reverts commit 65262fa739151fed1fae184186843428152f0779.

--- a/frontend/corona_tracker/android/app/src/main/AndroidManifest.xml
+++ b/frontend/corona_tracker/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="org.beatvirus.corona"
-        android:label="org.beatvirus.corona"
+        android:name="io.flutter.app.FlutterApplication"
+        android:label="corona_tracker"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
