--- a/backend/corona-server/pom.xml
+++ b/backend/corona-server/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.10</version>
+			<version>${lombok.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
