--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,7 @@
   <properties>
     <java.version>1.8</java.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
+    <lombok.version>1.18.10</lombok.version>
   </properties>
 
   <build>
@@ -34,6 +35,11 @@
               <groupId>org.mapstruct</groupId>
               <artifactId>mapstruct-processor</artifactId>
               <version>${mapstruct.version}</version>
+            </path>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
