--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,6 +19,7 @@
     <java.version>1.8</java.version>
     <mapstruct.version>1.3.1.Final</mapstruct.version>
     <lombok.version>1.18.10</lombok.version>
+    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
   </properties>
 
   <build>
@@ -42,6 +43,20 @@
               <version>${lombok.version}</version>
             </path>
           </annotationProcessorPaths>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <includes>
+            <include>**/*Test.java</include>
+            <include>**/Test*.java</include>
+            <include>**/*Tests.java</include>
+            <include>**/*TestCase.java</include>
+            <include>**/Spec*.java</include>
+          </includes>
         </configuration>
       </plugin>
       <plugin>
