--- a/backend/corona-server/src/main/resources/application-prod.properties
+++ b/backend/corona-server/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://${DB_SERVER}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=validate
