Add empty Google Map.

--- a/frontend/corona_tracker/android/app/src/main/AndroidManifest.xml
+++ b/frontend/corona_tracker/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-       
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="GOOGLE_MAPS_API_KEY_HERE" />
     </application>
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
