--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -49,6 +49,10 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+  fonts:
+    - family: BebasNeue
+      fonts:
+        - asset: fonts/BebasNeue-Regular.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
