--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   contacts_service: ^0.3.10
   permission_handler: '^4.4.0+hotfix.2'
   google_maps_flutter: ^0.5.25
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
