Changed style in StatusScreen

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ build/
 .vscode/
 frontend/corona_tracker/android/app/src/main/AndroidManifest.xml
 
+frontend/corona_tracker/android/app/src/main/AndroidManifest.xml
