--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   flutter_full_pdf_viewer: ^1.0.4
   path_provider: ^0.4.1
+  dropdown_formfield: ^0.1.1
 
   openapi:
     path: ./corona-api
