--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   dropdown_formfield: ^0.1.1
   flutter_linkify: ^3.1.0
   url_launcher: ^5.4.2
+  font_awesome_flutter: ^8.7.0
+  shared_preferences: ^0.5.6+3
 
 
 
