--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,7 +9,7 @@ services:
 
   database:
     container_name: ct_db
-    image: postgres:11
+    image: postgis/postgis:11-3.0
     environment:
       POSTGRES_DB: corona
       POSTGRES_USER: corona
@@ -21,5 +21,4 @@ services:
 
 
 volumes:
-  mysqldata:
   pgdata:
