--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   numberpicker: ^1.2.0
   font_awesome_flutter: ^8.8.1
-
+  preferences: ^5.1.0
 
   openapi:
     path: ./corona-api
