--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -8,7 +8,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        clean: false
+        with:
+          clean: false
       - name: Prepare Env
         run: |
           cp ~/dev/secrets/corona-app/Corona\ FCM.plist frontend/corona_tracker/ios/Runner/GoogleService-Info.plist
