--- a/frontend/corona_tracker/android/app/build.gradle
+++ b/frontend/corona_tracker/android/app/build.gradle
@@ -55,7 +55,7 @@ android {
        release {
            keyAlias keystoreProperties['keyAlias']
            keyPassword keystoreProperties['keyPassword']
-           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storeFile keystoreProperties['storeFile'] ? file('../' + keystoreProperties['storeFile']) : null
            storePassword keystoreProperties['storePassword']
        }
     }
@@ -64,7 +64,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release.storeFile ? signingConfigs.release : signingConfigs.debug
         }
     }
 }
