--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -16,11 +16,14 @@ jobs:
           cp ~/dev/secrets/corona-app/Corona\ FCM.json frontend/corona_tracker/android/app/google-services.json
           cp ~/dev/secrets/corona-app/Corona\ Playstore.json frontend/corona_tracker/android/playstore-serviceaccount.json
           cp ~/dev/secrets/corona-app/Corona\ Android\ Keystore.properties frontend/corona_tracker/android/key.properties
+          (cd frontend/corona_tracker/ && flutter clean)
 
       - name: Bundle Android AppBundle
-        run: cd frontend/corona_tracker/ && flutter build appbundle --target-platform android-arm,android-arm64,android-x64
+        run: |
+          (cd frontend/corona_tracker/ && flutter build appbundle --target-platform android-arm,android-arm64,android-x64)
       - name: Bundle iOS App
-        run: cd frontend/corona_tracker/ && flutter build ios --release --no-codesign
+        run: |
+          (cd frontend/corona_tracker/ && flutter build ios --release --no-codesign)
       - name: Publish Preview
         run: |
           (cd frontend/corona_tracker/android && fastlane install_plugins && fastlane alpha)
