--- a/frontend/corona_tracker/pubspec.yaml
+++ b/frontend/corona_tracker/pubspec.yaml
@@ -44,16 +44,19 @@ dependencies:
   font_awesome_flutter: ^8.7.0
   shared_preferences: ^0.5.6+3
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
-
-  openapi:
-    path: ./corona-api
-
+openapi:
+  path: ./corona-api
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl_translation: "0.17.9"
+  flutter_launcher_icons: "^0.7.3"
 
 
 # For information on the generic Dart part of this file, see the
